[gd_scene load_steps=19 format=3 uid="uid://bbrndjorcu6fx"]

[ext_resource type="Script" uid="uid://cf81un4t7q13x" path="res://scripts/plant_area.gd" id="1_ixs0h"]
[ext_resource type="Texture2D" uid="uid://c0dhwy0q11c81" path="res://assets/hex-bush1.png" id="2_ocxj1"]
[ext_resource type="Texture2D" uid="uid://c8trty10itoql" path="res://assets/hex-bush2.png" id="3_4m1qw"]
[ext_resource type="Texture2D" uid="uid://wic8jjn40sad" path="res://assets/hex-bush3.png" id="4_wo81p"]
[ext_resource type="Script" uid="uid://dnuuh20l3rv8s" path="res://world/plant_area_menu.gd" id="5_611ph"]
[ext_resource type="Texture2D" uid="uid://b25b0ofls5676" path="res://assets/hex-arrow2.png" id="6_v15q8"]
[ext_resource type="Texture2D" uid="uid://7dkserjyfmon" path="res://assets/hex-arrow1.png" id="7_alcw3"]
[ext_resource type="Theme" uid="uid://bu3qilx747ohm" path="res://assets/radial_menu.tres" id="8_guejq"]
[ext_resource type="Texture2D" uid="uid://b3ciwd0knnb0x" path="res://assets/hex-arrow4.png" id="9_g0o15"]
[ext_resource type="Texture2D" uid="uid://dtn7sbqp4e6py" path="res://assets/hex-arrow3.png" id="10_iau7l"]
[ext_resource type="PackedScene" uid="uid://dh2cgb087os3c" path="res://world/inspector_view.tscn" id="11_wldn6"]

[sub_resource type="CircleShape2D" id="CircleShape2D_be7xa"]
radius = 14.0357

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_gqn6o"]
texture = ExtResource("2_ocxj1")
texture_region_size = Vector2i(32, 28)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_hnfrt"]
tile_shape = 3
tile_size = Vector2i(32, 28)
sources/0 = SubResource("TileSetAtlasSource_gqn6o")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_f5yv1"]
texture = ExtResource("3_4m1qw")
texture_region_size = Vector2i(32, 28)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_qm5cq"]
tile_shape = 3
tile_size = Vector2i(32, 28)
sources/0 = SubResource("TileSetAtlasSource_f5yv1")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_qm5cq"]
texture = ExtResource("4_wo81p")
texture_region_size = Vector2i(32, 28)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_ie7tp"]
tile_shape = 3
tile_size = Vector2i(32, 28)
sources/1 = SubResource("TileSetAtlasSource_qm5cq")

[node name="ShrubArea" type="Area2D"]
script = ExtResource("1_ixs0h")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -7)
shape = SubResource("CircleShape2D_be7xa")

[node name="PlantTile" type="Node2D" parent="."]

[node name="Dead" type="TileMapLayer" parent="PlantTile"]
visible = false
tile_map_data = PackedByteArray(0, 0, 255, 255, 255, 255, 0, 0, 0, 0, 0, 0, 0, 0)
tile_set = SubResource("TileSet_hnfrt")

[node name="Healing" type="TileMapLayer" parent="PlantTile"]
visible = false
tile_map_data = PackedByteArray(0, 0, 255, 255, 255, 255, 0, 0, 0, 0, 0, 0, 0, 0)
tile_set = SubResource("TileSet_qm5cq")

[node name="Recovered" type="TileMapLayer" parent="PlantTile"]
tile_map_data = PackedByteArray(0, 0, 255, 255, 255, 255, 1, 0, 0, 0, 0, 0, 0, 0)
tile_set = SubResource("TileSet_ie7tp")

[node name="TileMenu" type="Control" parent="."]
visible = false
z_index = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = -4.0
offset_right = 2.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_611ph")
metadata/_edit_use_anchors_ = true

[node name="Top" type="TextureButton" parent="TileMenu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.485
anchor_top = 0.458
anchor_right = 0.485
anchor_bottom = 0.458
offset_left = -15.955
offset_top = -51.174
offset_right = 16.045
offset_bottom = -23.174
focus_neighbor_left = NodePath("../Left")
focus_neighbor_top = NodePath(".")
focus_neighbor_right = NodePath("../Right")
focus_neighbor_bottom = NodePath("../Bottom")
texture_normal = ExtResource("6_v15q8")
texture_focused = ExtResource("7_alcw3")
stretch_mode = 0

[node name="Action" type="Label" parent="TileMenu/Top"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.761
anchor_top = 0.5
anchor_right = -0.761
anchor_bottom = 0.5
offset_left = -0.692999
offset_top = -36.826
offset_right = 81.307
offset_bottom = -15.826
theme = ExtResource("8_guejq")
text = "Connect"
horizontal_alignment = 1
vertical_alignment = 2

[node name="Cost" type="Label" parent="TileMenu/Top"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.761
anchor_top = 0.5
anchor_right = -0.761
anchor_bottom = 0.5
offset_left = 0.307001
offset_top = -52.826
offset_right = 73.307
offset_bottom = -31.826
theme = ExtResource("8_guejq")
text = "-100"
horizontal_alignment = 1
vertical_alignment = 2

[node name="Right" type="TextureButton" parent="TileMenu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.485
anchor_top = 0.458
anchor_right = 0.485
anchor_bottom = 0.458
offset_left = 25.045
offset_top = -13.174
offset_right = 57.045
offset_bottom = 14.826
focus_neighbor_left = NodePath("../Left")
focus_neighbor_top = NodePath("../Top")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../Bottom")
texture_normal = ExtResource("9_g0o15")
texture_focused = ExtResource("10_iau7l")
stretch_mode = 0

[node name="Cost" type="Label" parent="TileMenu/Right"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 1.838
anchor_right = 0.5
anchor_bottom = 1.838
offset_left = 21.955
offset_top = -37.29
offset_right = 114.955
offset_bottom = -18.29
theme = ExtResource("8_guejq")
text = "-100"
vertical_alignment = 1

[node name="Action" type="Label" parent="TileMenu/Right"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 1.838
anchor_right = 0.5
anchor_bottom = 1.838
offset_left = 19.955
offset_top = -57.29
offset_right = 91.955
offset_bottom = -35.29
theme = ExtResource("8_guejq")
text = "Grow"
vertical_alignment = 1

[node name="Bottom" type="TextureButton" parent="TileMenu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.485
anchor_top = 0.458
anchor_right = 0.485
anchor_bottom = 0.458
offset_left = -15.955
offset_top = 21.826
offset_right = 16.045
offset_bottom = 49.826
focus_neighbor_left = NodePath("../Left")
focus_neighbor_top = NodePath("../Top")
focus_neighbor_right = NodePath("../Right")
texture_normal = ExtResource("6_v15q8")
texture_focused = ExtResource("7_alcw3")
stretch_mode = 0
flip_v = true

[node name="Action" type="Label" parent="TileMenu/Bottom"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = -0.729
anchor_right = 0.5
anchor_bottom = -0.729
offset_left = -28.045
offset_top = 52.586
offset_right = 30.955
offset_bottom = 90.586
theme = ExtResource("8_guejq")
text = "Close"
horizontal_alignment = 1

[node name="Cost" type="Label" parent="TileMenu/Bottom"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = -0.729
anchor_right = 0.5
anchor_bottom = -0.729
offset_left = -28.045
offset_top = 69.586
offset_right = 30.955
offset_bottom = 86.586
theme = ExtResource("8_guejq")
text = "-100"
horizontal_alignment = 1

[node name="Left" type="TextureButton" parent="TileMenu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.485
anchor_top = 0.458
anchor_right = 0.485
anchor_bottom = 0.458
offset_left = -54.955
offset_top = -13.174
offset_right = -22.955
offset_bottom = 14.826
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../Top")
focus_neighbor_right = NodePath("../Right")
focus_neighbor_bottom = NodePath("../Bottom")
texture_normal = ExtResource("9_g0o15")
texture_focused = ExtResource("10_iau7l")
stretch_mode = 0
flip_h = true

[node name="Action" type="Label" parent="TileMenu/Left"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.709
anchor_top = 0.5
anchor_right = 1.709
anchor_bottom = 0.5
offset_left = -133.688
offset_top = -23.0
offset_right = -57.688
offset_bottom = -3.0
theme = ExtResource("8_guejq")
text = "Play"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Cost" type="Label" parent="TileMenu/Left"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.709
anchor_top = 0.5
anchor_right = 1.709
anchor_bottom = 0.5
offset_left = -134.733
offset_top = -3.826
offset_right = -58.733
offset_bottom = 16.174
theme = ExtResource("8_guejq")
text = "-100"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Message" parent="." instance=ExtResource("11_wldn6")]
top_level = true
anchors_preset = -1
anchor_left = -0.099
anchor_top = -0.135
anchor_right = 0.095
anchor_bottom = 0.135
offset_left = 162.36
offset_top = 76.6
offset_right = 497.2
offset_bottom = 120.4
metadata/_edit_use_anchors_ = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="pressed" from="TileMenu/Top" to="TileMenu" method="_on_top_pressed"]
[connection signal="pressed" from="TileMenu/Right" to="TileMenu" method="_on_right_pressed"]
[connection signal="pressed" from="TileMenu/Bottom" to="TileMenu" method="_on_bottom_pressed"]
[connection signal="pressed" from="TileMenu/Left" to="TileMenu" method="_on_left_pressed"]
